fix for about section image on mobile

--- a/src/components/about-section/about-section.css
+++ b/src/components/about-section/about-section.css
@@ -52,10 +52,9 @@
   }
 }
 .home-profile-container {
-  /* position: relative; */
   overflow: hidden;
   width: 100%;
-  height: 400px;
+  display: block;
 }
 
 .home-profile-image {
@@ -64,7 +63,7 @@
   left: 0; */
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   object-position: center;
   transform-origin: center;
   /* transform: translateY(-50%); */
